--- a/src/index.css
+++ b/src/index.css
@@ -40,21 +40,28 @@ body {
 .nav-links li {
   padding: 30px;
   margin-top: 20px;
+  color: #888;
 }
 
 .greeting {
   font: inherit;
   font-weight: 600;
-  margin: 65px 0 35px 35px;
+  margin: 65px 0 45px 35px;
   font-size: 36px;
   animation: fadeIn 1.25s;
 }
 
-.focus-question {
-  margin: 35px 0 35px 35px;
+.task-style {
+  font-size: 24px;
 }
 
-.user-input {
+.add-task-btn {
+  display: block;
+  margin: 0 auto;
+  border-radius: 4px;
+  padding: 20px 35px;
+}
+.task-input {
   -color: transparent;
   caret-color: auto;
   font-size: 24px;
@@ -64,7 +71,9 @@ body {
   border-left: none;
   border-right: none;
   border-bottom: solid #333333 2px;
-  margin-left: 35px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
   width: 80%;
 }
 
@@ -83,4 +92,29 @@ body {
   100% {
     opacity: 1;
   }
+}
+
+/*Task Board*/
+
+.greet {
+  text-align: center;
+  margin-bottom: 30px;
+  font-family: inherit;
+}
+
+.task-item:hover {
+  background-color: #e32929;
+  cursor: pointer;
+}
+
+.remove {
+  float: right;
+}
+
+.task-list {
+  max-height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
 }
