--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   font-family: acumin-pro, sans-serif;
   font-weight: 400;
   font-style: normal;
+  background-color: black;
 }
 
 .nav {
@@ -43,8 +44,8 @@ body {
   color: #888;
 }
 
-.greeting {
-  font: inherit;
+.greet {
+  color: #fff;
   font-weight: 600;
   margin: 65px 0 45px 35px;
   font-size: 36px;
@@ -58,23 +59,25 @@ body {
 .add-task-btn {
   display: block;
   margin: 0 auto;
-  border-radius: 4px;
-  padding: 20px 35px;
+  font-size: 20px;
+  color: #fff;
+  background-color: #e32929;
+  border-radius: 8px;
+  padding: 15px 35px;
+  border-style: none;
 }
 .task-input {
-  -color: transparent;
   caret-color: auto;
   font-size: 24px;
   outline: none;
   outline-style: none;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: solid #333333 2px;
+  border: solid #888 2px;
+  border-radius: 40px;
   text-align: center;
   display: block;
   margin: 0 auto;
   width: 80%;
+  height: 60px;
 }
 
 .fade-in {
@@ -105,6 +108,10 @@ body {
 .task-item:hover {
   background-color: #e32929;
   cursor: pointer;
+}
+.task-item {
+  padding: 0 80px;
+  color: white;
 }
 
 .remove {
