--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: #e32929;
 }
 
 .site-logo {
@@ -27,7 +28,7 @@ body {
   margin-right: auto;
   list-style: none;
   text-decoration: none;
-  color: rgb(227, 41, 41);
+  color: #fff;
   position: fixed;
 }
 
@@ -43,11 +44,13 @@ body {
   display: flex;
   padding: 30px;
   margin-top: 20px;
+  text-decoration: none;
+
   color: #fff;
 }
 
 .nav-links li a:hover {
-  color: rgb(8, 233, 210);
+  color: rgb(0, 219, 197);
 }
 
 /* Quote component styles */
@@ -90,7 +93,7 @@ body {
   text-align: center;
   display: block;
   width: 70%;
-  height: 60px;
+  height: 40px;
   background-color: black;
 }
 
@@ -130,11 +133,10 @@ body {
 /* Task list styles */
 
 .list {
-  max-height: 500px;
+  max-height: 700px;
   display: flex;
   flex-direction: column;
   margin: 30px;
-  margin-bottom: 50px;
 }
 
 /* Fade animation for text */
