--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   list-style: none;
   text-decoration: none;
   color: #fff;
-  position: fixed;
+  position: fixed; /* logo moves */
 }
 
 .nav-links {
